--- a/GUI/MetaUpdater.xaml
+++ b/GUI/MetaUpdater.xaml
@@ -5,9 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MetaMorpheusGUI"
         mc:Ignorable="d"
-        Title="MetaUpdater" Height="220" Width="430" ResizeMode="NoResize" Topmost="True" WindowStartupLocation="CenterScreen">
+        Title="MetaUpdater" Height="529.588" Width="430" ResizeMode="NoResize" Topmost="True" WindowStartupLocation="CenterScreen">
     <StackPanel>
         <TextBlock Name="lbl" TextWrapping="Wrap" FontSize="15" VerticalAlignment="Top" Margin="5" />
+        <ScrollViewer Height="327">
+            <TextBlock TextWrapping="Wrap" Name="releases"/>
+        </ScrollViewer>
         <Button Content="Download and run installer" FontSize="13" Margin="5" Click="InstallerClicked" />
         <Button Content="Download and open portable version .zip " FontSize="13" Margin="5" Click="PortableClicked" />
         <Button Content="Not interested" FontSize="13" Margin="5" Click="NoClicked" />
