--- a/GUI/MainWindow.xaml
+++ b/GUI/MainWindow.xaml
@@ -143,7 +143,7 @@
                                     <StackPanel Orientation="Horizontal">
                                         <TextBlock Text="T " />
                                         <TextBlock Text="{Binding DisplayName}" />
-                                        <ProgressBar Value="{Binding Progress}" IsIndeterminate="{Binding IsIndeterminate}" Width="100" />
+                                        <ProgressBar Value="{Binding Progress}" IsIndeterminate="{Binding IsIndeterminate}" Width="100"  Margin="5,0,5,0" />
                                         <TextBlock Text="{Binding Status}" />
                                     </StackPanel>
                                 </HierarchicalDataTemplate>
@@ -151,7 +151,7 @@
                                     <StackPanel Orientation="Horizontal">
                                         <TextBlock Text="C " />
                                         <TextBlock Text="{Binding DisplayName}" />
-                                        <ProgressBar Value="{Binding Progress}" IsIndeterminate="{Binding IsIndeterminate}" Width="100" />
+                                        <ProgressBar Value="{Binding Progress}" IsIndeterminate="{Binding IsIndeterminate}" Width="100" Margin="5,0,5,0" />
                                         <TextBlock Text="{Binding Status}" />
                                     </StackPanel>
                                 </HierarchicalDataTemplate>
