--- a/MetaMorpheusSetup/Product.wxs
+++ b/MetaMorpheusSetup/Product.wxs
@@ -10,7 +10,7 @@
 
     <!--Properties about the package to be placed in the Summary Information Stream.-->
     <!--These are visible from COM through the IStream interface, and these properties can be seen on the package in Explorer.-->
-    <Package InstallerVersion="500" Compressed="yes" InstallScope="perMachine" Platform="x64"/>
+    <Package Id="*" InstallerVersion="500" Compressed="yes" InstallScope="perMachine" Platform="x64"/>
     <MajorUpgrade AllowSameVersionUpgrades="yes" Schedule="afterInstallValidate" DowngradeErrorMessage="A newer version of MetaMorpheus is already installed."/>
         
     <Condition Message="This application is only supported on Windows 7 or higher.">
@@ -40,9 +40,21 @@
       <ComponentGroupRef Id="Appsrc_Data_files"/>
       <ComponentRef Id="MetaAppsettings.toml"/>
       <ComponentRef Id="RomoveApp"/>
+      <ComponentRef Id="DesktopShortcut"/>
     </Feature>
    
     <Directory Id="TARGETDIR" Name="SourceDir">
+      <!--Desktop Shortcut Installation-->
+      <Directory Id="DesktopFolder" Name="Desktop">
+        <Component Id="DesktopShortcut" Guid="ef1fd292-b162-4990-80cb-cd2a0c839d4b">
+          <Condition>INSTALLDESKTOPSHORTCUT</Condition>
+          <RegistryKey Root="HKCU" Key="Software\SmithGroup\MetaMorpheus" Action="createAndRemoveOnUninstall">
+            <RegistryValue Name="MetaMorpheusDeskTop" Value="1" Type="integer" KeyPath="yes"/>
+          </RegistryKey>
+          <Shortcut Id="AppDeskTopSC" Name="MetaMorpheus" Description="Shortcut to App" Target="[#MetaMorpheusGUI.exe]" WorkingDirectory="MetaMorpheusInstallFolder" />
+        </Component>
+      </Directory>
+      
       <Directory Id="ProgramFiles64Folder">
         <Directory Id="MetaMorpheusInstallFolder" Name="MetaMorpheus">
           <Directory Id="DataFolder" Name="Data" />
